--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,3 +1,20 @@
+worker_processes auto;
+
 http {
 
+  server {
+    listen 443 ssl;
+    server_name fgabler.42.fr;
+
+    ssl_certificate /etc/nginx/ssl/nginx.crt;
+    ssl_certificate_key /etc/nginx/ssl/nginx.key;
+
+    location / {
+            root /usr/share/nginx/html;
+            index index.html;
+    }
 }
+
+}
+
+events { }
