--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -13,6 +13,11 @@ http {
             root /usr/share/nginx/html;
             index index.html;
     }
+
+    location ~ \.php$ {
+    include snippets/fastcgi-php.conf;
+    fastcgi_pass wordpress:9000;
+    }
 }
 
 }
