--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -5,18 +5,19 @@ http {
   server {
     listen 443 ssl;
     server_name fgabler.42.fr;
+    root         /var/www/html/mysite;
 
     ssl_certificate /etc/nginx/ssl/nginx.crt;
     ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
     location / {
-            root /usr/share/nginx/html;
-            index index.html;
+            index index.php index.html;
+            try_files $uri $uri/ /index.php?$args;
     }
 
     location ~ \.php$ {
-    include snippets/fastcgi-php.conf;
-    fastcgi_pass wordpress:9000;
+      include snippets/fastcgi-php.conf;
+      fastcgi_pass wordpress:9000;
     }
 }
 
