--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -5,20 +5,22 @@ http {
   server {
     listen 443 ssl;
     server_name fgabler.42.fr;
-    root         /var/www/html/mysite;
+    root        /var/www/html/mysite;
 
     ssl_certificate /etc/nginx/ssl/nginx.crt;
     ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
     location / {
-            index index.php index.html;
-            try_files $uri $uri/ /index.php?$args;
+      index index.php index.html;
+      try_files $uri $uri/ /index.php?$args;
     }
 
-    location ~ \.php$ {
-      include snippets/fastcgi-php.conf;
-      fastcgi_pass wordpress:9000;
-    }
+   location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass wordpress:9000;
+        fastcgi_index index.php;
+        include fastcgi.conf;
+  }
 }
 
 }
