add new nginx config

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,28 +1,35 @@
 worker_processes auto;
 
 http {
-
   server {
     listen 443 ssl;
     server_name fgabler.42.fr;
-    root        /var/www/html/mysite;
+    root /var/www/html/mysite/;
 
     ssl_certificate /etc/nginx/ssl/nginx.crt;
     ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
+    index index.php index.html;
+
     location / {
-      index index.php index.html;
-      try_files $uri $uri/ /index.php?$args;
+      try_files $uri $uri/ /index.php?$query_string;
     }
 
-   location ~ \.php$ {
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass wordpress:9000;
-        fastcgi_index index.php;
-        include fastcgi.conf;
-  }
-}
+    location ~ \.php$ {
+      fastcgi_pass wordpress:9000;
+      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+      fastcgi_param DOCUMENT_ROOT $document_root;
+      # fastcgi_param HTTP_HOST $host;
+      include fastcgi_params;
+    }
 
+    include       mime.types;
+    default_type  application/octet-stream;
+
+    types {
+        application/javascript   js;
+    }
+  }
 }
 
 events { }
