--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     env_file: "../.env"
     networks:
       - inception_net
+    volumes:
+      - mariadb-vol:/var/lib/mysql
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 5s
@@ -29,7 +31,6 @@ services:
     depends_on:
       mariadb:
         condition: service_healthy
-
 
   nginx:
     container_name: nginx
@@ -63,3 +64,11 @@ volumes:
       device: "wp_and_nginx_dir"
       o: bind
       type: none
+  mariadb-vol:
+    name: 'mariadb-vol'
+    driver: local
+    driver_opts:
+      device: "mariadb-dir"
+      o: bind
+      type: none
+
