--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -16,6 +16,9 @@ services:
       interval: 5s
       timeout: 5s
       retries: 3
+    restart: always
+    secrets:
+      - maria-pass
 
   wordpress:
     container_name: wordpress
@@ -31,6 +34,11 @@ services:
     depends_on:
       mariadb:
         condition: service_healthy
+    restart: always
+    secrets:
+      - maria-pass
+      - wp-db-user-pass
+      - author_pass
 
   nginx:
     container_name: nginx
@@ -47,6 +55,7 @@ services:
       - wp-and-ngix-vol:/var/www/html/mysite
     depends_on:
       - wordpress
+    restart: always
 
 
 
@@ -72,3 +81,10 @@ volumes:
       o: bind
       type: none
 
+secrets:
+  maria-pass:
+    file: ./../secrets/maria-pass.txt
+  wp-db-user-pass:
+    file: ./../secrets/wp-db-user-pass.txt
+  author_pass:
+    file: ./../secrets/author_pass.txt
